Fix veg portions for child 4-6 and 7-8 (map to child_4_8)

--- a/templates/index.html
+++ b/templates/index.html
@@ -9199,7 +9199,7 @@ const allergenPanel = allergenNames.length === 0
         internalKey = 'girl_9_13';
       } else if (ageGroup === 'boy-9-13') {
         internalKey = 'boy_9_13';
-      } else if (ageGroup === 'child-4-8') {
+      } else if (ageGroup === 'child-4-6' || ageGroup === 'child-7-8' || ageGroup === 'child-4-8') {
         internalKey = 'child_4_8';
       } else if (ageGroup === 'girl-14-18') {
         internalKey = 'girl_14_18';
